  initialization.
- rlm() could fail with some psi functions (e.g. psi.hampel) if 'init' was
  given as a numeric vector.
- rlm() handles weighted fits slightly differently, in particular trying
  to give the same scale estimate if wt.method="case" as if replicating the
  cases.
- confint.nls copes with plinear models in R (now profile.nls does).
- The wrappers lmsreg() etc have been adapted to work in the MASS namespace.
- qda() accepts formulae containing backquoted non-syntactic names.
- polr() gives an explicit error message if 'start' is misspecified.
- glmmPQL() evaluates the formulae for 'fixed' and 'random', which may
  help if they are given as variables and not values.
- There are anova() and logLik() methods for class "glmmPQL" to stop misuse.
- profile.polr() now works for a single-coefficient model.
- The print and print.summary methods for polr and rlm make use of
  naprint() to print a message e.g. about deleted observations.
- Class "ridgelm" now has a coef() method, and works for n < p.
- lda() and qda() now check explicitly for non-finite 'x' values.
- ch06.R has been updated for multcomp >= 0.991-1
- profile.glm is more likely to find the model frame in complicated
  scopes.
- message() is used for most messages.
- truehist() checks more thoroughly for erroneous inputs.
- polr(model=TRUE) works again.
- add logLik() method for polr.
- the summary() methods for classes "negbin" and "rlm" now default to
  correlation = FALSE.
- there is a vcov() method for class "negbin": unlike the "glm" method
  this defaults to dispersion = 1.
- coding for 'sex' in ?Melanoma has been corrected.
- the example for gamma.shape has a better starting points and so converges
- avoid abbreviation of survreg(dist=) in example(gehan)
- profile() and confint() methods for "glm" objects now handle
  rank-deficient fits.
- profile.glm() produced an output in a format plot.profile could not
  read for single-variable fits.