@@ -165,7 +165,9 @@ Library MASS
 - profile() and confint() methods for "glm" objects now handle
   rank-deficient fits.
 - profile.glm() produced an output in a format plot.profile could not
-  read for single-variable fits.
+  read for single-variable fits.  It also for confint() on intercept-only
+  fits.
+- The print() methods for fitdistr() and lm.ridge() now return invisibly.
 
 
 
